nav item spacing - fixes #40

--- a/src/stylesheets/components/_header.sass
+++ b/src/stylesheets/components/_header.sass
@@ -1,8 +1,8 @@
 .header
+  +clamp('gap', $baseline, 5.8125em, $smallDesktop, $desktop)
   +gutters
   align-items: center
   display: flex
-  gap: $baseline
   justify-content: space-between
   padding-block: $baseline * .5
   position: fixed
